--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Juan Carlos Corona Romero <c@rlos.email>",
+  "license": "MIT",
   "dependencies": {
     "cross-fetch": "^3.0.4",
     "glob": "^7.1.6"
